recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:2: error: not found: value level
	if(level==1){
           ^