recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
	if(level==1){
		avance(1)
	}
}
